syntax = "proto3";

package mainPackage;

service Mail {
    rpc SendSignupConfirmMail (DefaultMailRequest) returns (DefaultMailResponse) {};
    rpc SendResetPasswordMail (DefaultMailRequest) returns (DefaultMailResponse) {};
}

service Permit {
    rpc HasPermission (HasPermissionRequest) returns (HasPermissionResponse) {};
    rpc InsertPolicy (InsertPolicyRequest) returns (InsertPolicyResponse) {};
    rpc RemovePolicy (InsertPolicyRequest) returns (InsertPolicyResponse) {};
}

message DefaultMailRequest {
    string email = 1;
    string token = 2;
}

message DefaultMailResponse {
    bool success = 1;
    string error = 2;
}

message HasPermissionRequest {
    string target = 1;
    string resource = 2;
    string action = 3;
}

message HasPermissionResponse {
    bool allowed = 1;
}

message InsertPolicyRequest {
    string target = 1;
    int64 targetId = 2;
    string resource = 3;
    int64 resourceId = 4;
    string effect = 5;
    string action = 6;
}

message InsertPolicyResponse {
    bool success = 1;
}